<resources>
    <string name="app_name" translatable="false">AniCam</string>
    <string name="title_home">库</string>
    <string name="title_photograph">拍摄</string>
    <string name="tooltip_addPicButton">添加图片</string>
    <string name="tooltip_addPicFromFolderButton">从文件夹添加图片</string>
    <string name="tooltip_switchPicSortModeButton">排序图片</string>
    <string name="tooltip_addLibButton">添加库</string>
    <string name="tooltip_importLibFolderButton">从文件夹导入</string>
    <string name="tooltip_switchLibSortModeButton">排序库</string>
    <string name="dialogTitle_addLib">添加图片</string>
    <string name="menu_edit">编辑名称</string>
    <string name="menu_delete">删除</string>
    <string name="dialogTitle_editLib">编辑库名称</string>
    <string name="dialogTitle_delete">删除</string>
    <string name="dialogMsg_deleteLib">你确定要删除这个库吗</string>
    <string name="dialogButton_submit">确认</string>
    <string name="dialogButton_cancel">取消</string>
    <string name="info_errorNotSelectedLib">请先选择一个库</string>
    <string name="menu_addTo">添加到...</string>
    <string name="dialogTitle_editPic">编辑图片名称</string>
    <string name="dialogMsg_deletePic">你确定要删除这个图像吗</string>
    <string name="info_duplicatedAdd">重复添加</string>
    <string name="ui_homeLib">库</string>
    <string name="ui_homePic">图像</string>
    <string name="ui_notSelected">未选择</string>
    <string name="hint_zoom">缩放：</string>
    <string name="hint_aspectRatio">宽高比：</string>
    <string name="hint_aspectRatio_value_fullScreen">全屏</string>
    <string name="hint_aspectRatio_value_1_1">正方形</string>
    <string name="hint_facing">摄像头：</string>
    <string name="hint_facing_value_front">前</string>
    <string name="hint_facing_value_back">后</string>
    <string name="hint_flashLight">闪光灯：</string>
    <string name="hint_flashLight_value_on">开</string>
    <string name="hint_flashLight_value_off">关</string>
    <string name="hint_rotation">旋转：</string>
    <string name="hint_rotation_suffix">°</string>
    <string name="hint_scale">缩放：</string>
    <string name="saveFolderName" translatable="false">Anicam</string>
    <string name="info_locationTimeout">获取位置信息超时，将不保存位置信息</string>
    <string name="info_fileSaveFailed">文件保存失败</string>
    <string name="info_fileSaved">照片已保存</string>
    <string name="info_fileSavedWithExif">照片已保存，附带信息：<![CDATA[<br>]]></string>
    <string name="content_defaultPresetName">默认</string>
    <string name="info_picUriNotExists">文件不存在</string>
    <string name="suffix_notExistingPic">(丢失)</string>
    <string name="menu_copy">复制</string>
    <string name="content_defaultNewPresetName">新预设</string>
    <string name="dialogMsg_deletePreset">你确定要删除这个预设吗</string>
    <string name="dialogTitle_editPreset">编辑预设名称</string>
    <string name="ui_photograph_lib">库</string>
    <string name="ui_photograph_screen">屏幕</string>
    <string name="info_importedFileDeleted">导入文件已删除</string>
    <string name="info_exampleFileSaved">示例文件已导出</string>
    <string name="title_openSourceLicense">开放源代码许可</string>
    <string name="info_unzipping">解压中</string>
    <string name="hint_unzipped_files_prefix">已解压</string>
    <string name="hint_unzipped_files_suffix">个文件</string>
    <string name="hint_importDone">导入完成</string>
    <string name="hint_importFailed">导入失败</string>
    <string name="title_setting">设置</string>
    <string name="setting_overflowExtent_title">限制图像超出程度</string>
    <string name="setting_overflowExtent_msg">0~1，值越大立绘可超出边界越多</string>
    <string name="setting_playgroundMode_title">游乐场模式</string>
    <string name="setting_playgroundMode_msg">在所有页面均不显示相机画面，可供合成图片</string>
    <string name="category_title_common">通用</string>
    <string name="category_title_photograph">拍摄</string>
    <string name="setting_volumeButtonCapture_title">音量键拍照</string>
    <string name="setting_volumeButtonCapture_msg">使用音量键来拍照</string>
    <string name="setting_photoNameFormat_title">图片文件名格式</string>
    <string name="setting_photoNameFormat_msg">保存的图片文件名的格式，日期需使用大括号包裹</string>
    <string name="setting_timeWatermark_title">时间水印</string>
    <string name="setting_timeWatermark_msg">在照片左下角添加一个时间水印</string>
    <string name="setting_timeWatermark_format_title">时间水印格式</string>
    <string name="setting_timeWatermark_format_msg">时间水印的格式，日期需使用大括号包裹</string>
    <string name="setting_timeWatermark_color_title">时间水印颜色</string>
    <string name="setting_timeWatermark_color_msg">时间水印的颜色，要求传入一个符合Color.parseColor()要求的colorString</string>
    <string name="setting_timeWatermark_size_title">时间水印大小</string>
    <string name="setting_addEXIF_title">添加EXIF信息</string>
    <string name="setting_addEXIF_msg">在照片中保存相机EXIF信息</string>
    <string name="setting_addLocation_title">添加位置信息</string>
    <string name="setting_addLocation_msg">在照片中保存位置信息，需打开定位服务</string>
    <string name="setting_saveOrigin_title">保存原始照片</string>
    <string name="setting_saveOrigin_msg">同时导出添加立绘之前的原始照片</string>
    <string name="category_table">桌面</string>
    <string name="setting_showClock_title">显示时钟</string>
    <string name="setting_showClock_msg">在桌面模式下显示一个时钟</string>
    <string name="setting_importClockHTML_title">导入时钟html源文件</string>
    <string name="setting_importClockHTML_msg">导入时钟html源文件的zip包，以index.html为入口</string>
    <string name="setting_deleteImportedHTML_title">删除导入包</string>
    <string name="setting_deleteImportedHTML_msg">删除导入的html源文件以恢复</string>
    <string name="setting_exportClockExample_title">导出示例html源文件</string>
    <string name="setting_exportClockExample_msg">将示例html源文件导出到Downloads文件夹</string>
    <string name="categoty_about">关于</string>
    <string name="setting_about_title">关于软件</string>
    <string name="setting_license_title">开放源代码许可</string>
    <string name="title_table">桌面</string>
    <string name="dialogTitle_colorOptions">颜色选项</string>
    <string name="ui_hue">色调/色相</string>
    <string name="ui_saturation">饱和度</string>
    <string name="ui_luminance">亮度</string>
    <string name="ui_button_reset">恢复</string>
    <string name="info_captureFailed">拍照失败</string>
    <string name="info_noAvailablePhotoViewer">未找到可用的图片查看器</string>
    <string name="ui_selectPhotoViewer">选择图片查看器</string>
    <string name="content_location">位置信息</string>
    <string name="content_exif">EXIF</string>
    <string name="info_uiHidedTip">UI已隐藏，可通过长按屏幕恢复</string>
    <string name="info_picAutoDeleted_prefix">已添加的图片<![CDATA[<br>]]></string>
    <string name="info_picAutoDeleted_suffix"><![CDATA[<br>]]>不存在，已自动删除</string>
    <string name="info_sensorInit">传感器初始化中...</string>
    <string name="info_sensorInitFailed">传感器初始化失败，请尝试重启软件，或本设备不支持加速度传感器</string>
    <string name="setting_keepScreenOn_title">保持屏幕常亮</string>
    <string name="setting_keepScreenOn_msg">在桌面模式下保持屏幕常亮，可能导致耗电、烧屏等问题，谨慎开启</string>
</resources>