<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.wyywn.anicam.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_photograph"
        android:name="com.wyywn.anicam.ui.PhotographFragment"
        android:label="@string/title_photograph"
        tools:layout="@layout/fragment_photograph" />

    <fragment
        android:id="@+id/navigation_table"
        android:name="com.wyywn.anicam.ui.TableFragment"
        android:label="@string/title_table"
        tools:layout="@layout/fragment_table" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.wyywn.anicam.ui.SettingsFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_settings" />
</navigation>