<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/background_top_rounded"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dialogTitle_colorOptions"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>
        <Button
            android:id="@+id/reset_button"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_button_reset" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_hue"
                android:layout_weight="1"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="80dp"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/hueValue_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="128"
                    android:gravity="center"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <com.google.android.material.slider.Slider
                android:id="@+id/hue_slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:valueFrom="0"
                android:valueTo="255"
                android:value="128"
                android:stepSize="0.1"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_saturation"
                android:layout_weight="1"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="80dp"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/saturationValue_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="128"
                    android:gravity="center"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <com.google.android.material.slider.Slider
                android:id="@+id/saturation_slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:valueFrom="0"
                android:valueTo="255"
                android:value="128"
                android:stepSize="0.1"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_luminance"
                android:layout_weight="1"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="80dp"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/luminanceValue_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="128"
                    android:gravity="center"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <com.google.android.material.slider.Slider
                android:id="@+id/luminance_slider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:valueFrom="0"
                android:valueTo="255"
                android:value="128"
                android:stepSize="0.1"
                android:layout_weight="1" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:visibility="gone">

        <Button
            android:id="@+id/cancelButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="_cancel"/>

        <Button
            android:id="@+id/submitButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="_ok" />

    </LinearLayout>
</LinearLayout>